# VideoCutter

./: CMakeLists.txt  README.md  form.cpp  main.cpp
